NOTICE: Please see https://arkime.com/faq#upgrading-moloch for upgrading info

ES Versions:
  * Moloch >= 3.0.0  supports ES >= 7.10.0, not 8.x or later
  * Moloch >= 2.7.0  supports ES >= 7.4.0
  * Moloch >= 2.2.0  supports ES >= 6.8.0 or >= 7.1.0
  * Moloch >= 2.0.0  supports ES >= 6.7.0 or >= 7.1.0
  * Moloch >= 1.5.0  supports ES >= 5.5.0, 6.x, not 7.x or later
  * Moloch >= 1.0.0  supports ES >= 5.5.0, 6.x (not prod tested, only for new installs), not 7.x or later
  * Moloch >= 0.50.0 supports ES >= 5.5.0, not 6.x or later
  * Moloch >= 0.18.1 supports ES 2.4.x, >= 5.3.1 not 6.x or later

Node Versions:
  * Moloch >= 3.4.0 requires NodeJS 16.x
  * Moloch >= 3.0.0 requires NodeJS 14.x
  * Moloch >= 2.4.0 requires NodeJS 12.x
  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.0.0 2022/08/xx
  - BREAKING - Must be 3.3.0+ to upgrade to 4.x
  - BREAKING - Move to roles for some permission checking,
               userAdmin role required to edit users
  - BREAKING - the version file lives in common directory now
  - BREAKING - new defaults maxFileSizeG=12, compressES=true
  - BREAKING - pcap compression is turned on by default, disable with simpleCompression=none
  - BREAKING - simpleGzipBlockSize renamed simpleCompressionBlockSize
  - BREAKING - right-click changed to value-actions in config
  - BREAKING - the userId search in history for admin nolonger adds the surrounding wildcards automatically
  - release - cyberchef 9.46.5, node 16.16.0
  - release - systemd files are delivered with /opt/arkime path instead of setting at install time
  - release - CICD tests with OpenSearch
  - all - Support ES 8 & OpenSearch