@@ -6,12 +6,11 @@ Basic Arkime Installation steps:
  2) Install the downloaded package
  3) Configure basic arkime items by running the Configure script (this needs to be done only once)
      /opt/arkime/bin/Configure
- 4) The Configure script can install elasticsearch for you or you can install yourself
-      systemctl start elasticsearch.service
- 5) Initialize/Upgrade OpenSearchElasticsearch Arkime configuration
+ 4) The Configure script can install OpenSearch/Elasticsearch for you or you can install yourself
+ 5) Initialize/Upgrade OpenSearch/Elasticsearch Arkime configuration
   a) If this is the first install, or want to delete all data
       /opt/arkime/db/db.pl http://ESHOST:9200 init
-  b) If this is an update to a moloch/arkime package
+  b) If this is an update to a Arkime package
       /opt/arkime/db/db.pl http://ESHOST:9200 upgrade
  6) Add an admin user if a new install or after an init
       /opt/arkime/bin/arkime_add_user.sh admin "Admin User" THEPASSWORD --admin
@@ -29,7 +28,7 @@ If you want IP -> Geo/ASN to work, you need to setup a maxmind account and the g
 See https://arkime.com/faq#maxmind
 
 Any configuration changes can be made to /opt/arkime/etc/config.ini
-See https://arkime.com/faq#moloch-is-not-working for issues
+See https://arkime.com/faq#arkime-is-not-working for issues
 
 Additional information can be found at:
   * https://arkime.com/faq
